tests/tests/snapshots/integration__run_images@star_polygon3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/star_polygon3.gleam
---
<svg width="65.0" height="62.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 22.360679774997898 61.55367074350507 L 6.1803398874989455 11.755705045849467 L 58.54101966249684 11.755705045849457 L 42.360679774997905 61.553670743505066 L 0.0 30.77683537175254 L 42.36067977499789 0.0 L 58.541019662496836 49.79796569765563 L 6.180339887498953 49.79796569765561 L 22.36067977499789 3.552713678800501e-15 L 64.7213595499958 30.77683537175253 Z" fill="rgba(100, 149, 237, 1.0)" />
</svg>
