tests/tests/snapshots/integration__run_images@text1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/text1.gleam
---
<svg width="116.0" height="16.0" xmlns="http://www.w3.org/2000/svg">
  <text dominant-baseline="alphabetic" text-anchor="start" x="0.0" y="0.0" font-family="sans-serif" font-size="16.0" font-style="normal" font-weight="normal" transform="translate(57.599999999999994,8.0) rotate(0.0 0.0 0.0) scale(1.0,1.0)" fill="rgba(0, 0, 0, 1.0)" >Testing text</text>
</svg>
